--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,9 +25,9 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    compile 'com.lany:BannerView:2.1.0'
-    compile 'com.squareup.okhttp3:okhttp:3.7.0'
-    compile 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'com.lany:BannerView:2.1.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.7.0'
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
 
 
 }
