--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,6 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:3.7.0'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
     implementation 'com.android.support:design:28.0.0'
-
+    implementation 'com.wuxiaolong.pullloadmorerecyclerview:library:1.1.2'
 
 }
