--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".application.App"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
@@ -20,6 +21,12 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.SingersActivity" />
+        <activity android:name=".activity.RecommentListActivity" />
+        <activity android:name=".activity.PlayActivity" />
+
+
+        <service android:name=".service.SimpleService"
+            android:exported="false"/>
 
     </application>
 
